--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.3
 homepage: "https://github.com/Nolence/stepper_page_view"
 
 environment:
-  sdk: ">=2.17.6 <= 3.0.4"
+  sdk: ">=2.17.5 < 3.0.4"
   flutter: ">=1.17.0"
 
 dependencies:
